--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.1",
+    "@web3auth/web3auth": "^0.3.0",
+    "magic-sdk": "^8.0.1",
+    "moralis": "^1.3.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-moralis": "^1.3.1",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
